# llm_lab

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  GEMINI_INSTRUCTIONS.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: regression-gate.yml
assets/: indexed_chunks.json
assets/docs/: ci_cd_github_actions.md  docker_basics.md  kubernetes_intro.md  terraform_basics.md
docs/: rag_v1_architecture.md
evals/: README.md  check_regression.py  dataset.jsonl  results.csv  results.json  run_eval.py
evals/results/: 2026-04-12_baseline.md  2026-04-12_threshold-0.85.md  2026-05-01_post-refactor-gemini-embedding-2-10000chunks.md  2026-05-01_post-refactor-gemini-embedding-2-filestore.md  2026-05-01_pre-refactor-gemini-embedding-001-1000chunks.md  2026-05-01_pre-refactor-gemini-embedding-001-5000chunks.md  2026-05-01_pre-refactor-gemini-embedding-2-1000chunks.md
infra/: main.tf  outputs.tf  providers.tf  variables.tf
src/llm_lab/: __init__.py  chat.py  main.py  naive_rag.py  rag_core.py
src/llm_lab/api/: dependencies.py  main.py
src/llm_lab/api/routers/: query.py
src/llm_lab/config/: paths.py  settings.py  variables.py
src/llm_lab/core/: factories.py  rag_service.py
src/llm_lab/llm/: errors.py  gemini_client.py  types.py
src/llm_lab/observability/: context.py  logging.py
src/llm_lab/retrieval/: indexing.py  retriever.py  types.py
src/llm_lab/vector_store/: file_store.py  qdrant.py  types.py
src/llm_lab/vector_store/file/: file_store.py  types.py
tests/: conftest.py  fakes.py  test_file_store_cosine_similarity.py  test_main.py  test_rag_core.py
tests/api/: test_main_api.py  test_query_api.py
tests/core/: test_factories.py  test_rag_service.py
tests/retrieval/: test_indexing.py  test_retriever.py
tests/vector_store/: test_file_store.py
