[project]
name = "llm-lab"
version = "0.1.0"
description = "Add your description here"
#readme = "README.md"
authors = [
    { name = "Vishal Bhargava", email = "vish.bhargava91@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "black>=25.12.0",
    "fastapi>=0.123.0",
    "google-genai>=1.53.0",
    "pyrefly>=0.45.2",
    "ruff>=0.14.9",
    "ty>=0.0.1a34",
    "typer>=0.20.0",
    "uvicorn[standard]>=0.38.0",
]

[project.scripts]
llm-lab = "llm_lab:main"

[build-system]
requires = ["uv_build>=0.9.12,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
]
