[project]
name = "llm-lab"
version = "0.1.0"
description = "Add your description here"
#readme = "README.md"
authors = [
    { name = "Vishal Bhargava", email = "vish.bhargava91@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "contextvars>=2.4",
    "fastapi>=0.135.3",
    "google-genai>=1.72.0",
    "pydantic-settings>=2.13.1",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.10",
    "starlette>=1.0.0",
    "typer>=0.24.1",
    "uvicorn[standard]>=0.44.0",
]

[project.scripts]
llm-lab = "llm_lab:main"

[build-system]
requires = ["uv_build>=0.9.12,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
